--- a/templetes/partials/navbar.hbs
+++ b/templetes/partials/navbar.hbs
@@ -10,7 +10,10 @@
 
 
     <style>
-        
+        .navbar a{
+            text-decoration: none;
+            
+        }
     </style>
     </head>
 
