--- a/templetes/partials/navbar.hbs
+++ b/templetes/partials/navbar.hbs
@@ -10,10 +10,19 @@
 
 
     <style>
-        .navbar a{
-            text-decoration: none;
+        .navbar{
             
+            position:sticky;
         }
+     .navbar a{
+        text-decoration: none;
+        margin: .5rem;
+        color: aliceblue;
+        font-size: 1.2rem;
+     }
+     .navbar a:hover{
+         color: rgb(255, 174, 0);
+     }
     </style>
     </head>
 
