--- a/templetes/partials/footer.hbs
+++ b/templetes/partials/footer.hbs
@@ -44,6 +44,22 @@
             padding: 1rem;
             font-size: 1.2rem;
         }
+
+        /*------------------responsive------------------ */
+        @media only screen and (max-width : 600px)
+        {
+
+            .foot{
+            padding: 2rem;
+           
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-gap: 1rem;
+            color: whitesmoke;
+        }
+
+        }
+        
     </style>
 </head>
 <body>
